--- a/index.html
+++ b/index.html
@@ -11,16 +11,32 @@
     <link rel="stylesheet" href="build.css/app.css">
 </head>
 <body>
-  <header class="header">
-    <div class="contenedor contenido-header">
-        <h1>Rock & EDM Festival</h1>
+    <header class="header">
+        <div class="contenedor contenido-header">
+            <h1>Rock & EDM Festival</h1>
 
-        <nav class="navegacion-principal">
-            <a href="#">Line Up</a>
-            <a href="#">Galeria</a>
-            <a href="#">Boletos</a>
-        </nav>
+            <nav class="navegacion-principal">
+                <a href="#">Line Up</a>
+                <a href="#">Galeria</a>
+                <a href="#">Boletos</a>
+            </nav>
+        </div>
+    </header>
+        
+    <div class="video">
+        <div class="overlay">
+            <div class="contenedor contenido-video">
+                <h2>Rock & EDM Festival </h2>
+                <p>Julio 2024, Corrientes, Argentina</p>
+            </div>
+        </div>
+        <video autoplay muted loop>
+            <source src="video/concierto.mp4" type="video/mp4">
+            <source src="video/concierto.ogg" type="video/ogg">
+            <source src="video/concierto.webm" type="video/webm">
+        </video>
     </div>
-  </header>
+
+     
 </body>
 </html>
