creando_seccion_del _festival

--- a/index.html
+++ b/index.html
@@ -36,7 +36,16 @@
             <source src="video/concierto.webm" type="video/webm">
         </video>
     </div>
+    <section class="contenedor sobre-festival">
+        <div class="imagen">
+            <img src="img/imagen_vocalista.jpg" alt="Imagen del vocalista del festival">
+        </div>
+        <div class="contenido-festival">
+            <h2> Rock & EDM Festival</h2>
+            <p class="fecha"> Julio 2024, Corrientes Argentina</p>
+            <p> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse quod in enim sapiente repudiandae explicabo voluptate beatae corrupti, libero nostrum rerum reprehenderit vero laborum eum totam et deserunt dignissimos alias!</p>
+        </div>
 
-     
+    </section>
 </body>
 </html>
